--- a/premium-egitimler.html
+++ b/premium-egitimler.html
@@ -129,9 +129,7 @@
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>10 Parmak Klavye Kursu ile Hızlı Yazmayı Öğrenin</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">
-                            <em>Card Subtitle</em>
-                        </h6>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Öğrencilerin %77'si bunu satın aldı</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Hızlı yazma tekniklerini öğrenerek takılmadan, doğru yazmayı öğrenin. Kitap, makale, blog yazmak daha eğlenceli olacak.<br></p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
@@ -144,8 +142,7 @@
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>YouTube için Google Reklam Stratejileri</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">
-                            <em>Card Subtitle</em>
-                        </h6>
+                            <em>Kanalı hızlı büyütmek isteyenler alsın</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Google Ads ile reklam verme ve YouTube kanalını hızla büyütme. 4000 saat ve 1000 aboneye hızlı ulaşma rehberi.<br></p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
@@ -159,9 +156,7 @@
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>YouTube Kanal Geliştirme ve SEO Formülleri</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">
-                            <em>Card Subtitle</em>
-                        </h6>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Öğrencilerin %97'si bunu satın aldı</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">“A’dan Z’ye YouTube Para Kazanma Sırları” YouTube izlenme arttırma hakkında her şey. Sıralamada her zaman önde çıkın.<br></p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
@@ -173,9 +168,7 @@
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>YouTube ve Video Montaj Eğitim Seti (Yeni Başlayanlar İçin)</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">
-                            <em>Card Subtitle</em>
-                        </h6>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Öğrencilerin %93'ü tavsiye ediyor</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">YouTube eğitim seti ve video edit yapma. YouTube kanalı açın ve internetten para kazanın. Sıfırdan adım adım öğrenin.<br></p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
@@ -187,9 +180,7 @@
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Dijital Pazarlama Tasarım Kursu A-Z™ | 70 Proje 1 Arada!</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">
-                            <em>Card Subtitle</em>
-                        </h6>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Öğrencilerin %87'si bunu da satın aldı</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Platformun “en kapsamlı” dijital içerik, yayıncılık ve tasarım eğitimidir. Dijital pazarlama tasarım uzmanı olacaksınız.<br></p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
@@ -201,9 +192,7 @@
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Dijital Reklam için Tasarım ve Animasyon Kursu</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">
-                            <em>Card Subtitle</em>
-                        </h6>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Herkesin alması gereken eğitim</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Dijital pazarlama, sosyal medya reklamcılığı, Instagram, Facebook ve Google reklamlarını animasyonlar ile canlandırın!<br></p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
@@ -310,7 +299,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3111945" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">AI Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3111945" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">AI Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
