create github pages

--- a/premium-egitimler.html
+++ b/premium-egitimler.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -132,7 +131,7 @@
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Öğrencilerin %77'si bunu satın aldı</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Hızlı yazma tekniklerini öğrenerek takılmadan, doğru yazmayı öğrenin. Kitap, makale, blog yazmak daha eğlenceli olacak.<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://go.rasulov.net/10-parmak-klavye-kursu" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
@@ -145,7 +144,7 @@
                             <em>Kanalı hızlı büyütmek isteyenler alsın</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Google Ads ile reklam verme ve YouTube kanalını hızla büyütme. 4000 saat ve 1000 aboneye hızlı ulaşma rehberi.<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://go.rasulov.net/google-youtube-reklam-verme" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
                 </div>
             </div>
             
@@ -159,7 +158,7 @@
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Öğrencilerin %97'si bunu satın aldı</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">“A’dan Z’ye YouTube Para Kazanma Sırları” YouTube izlenme arttırma hakkında her şey. Sıralamada her zaman önde çıkın.<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://go.rasulov.net/uzmanindan-youtube-kanal-gelistirme-formulleri" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
@@ -171,7 +170,7 @@
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Öğrencilerin %93'ü tavsiye ediyor</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">YouTube eğitim seti ve video edit yapma. YouTube kanalı açın ve internetten para kazanın. Sıfırdan adım adım öğrenin.<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://go.rasulov.net/youtube-ile-internetten-para-kazanma" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
@@ -183,7 +182,7 @@
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Öğrencilerin %87'si bunu da satın aldı</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Platformun “en kapsamlı” dijital içerik, yayıncılık ve tasarım eğitimidir. Dijital pazarlama tasarım uzmanı olacaksınız.<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://go.rasulov.net/dijital-pazarlama-grafik-tasarim-kursu" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
@@ -195,7 +194,7 @@
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Öğrencilerin %93'ü tavsiye ediyor</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Dijital pazarlama, sosyal medya reklamcılığı, Instagram, Facebook ve Google reklamlarını animasyonlar ile canlandırın!<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://go.rasulov.net/sosyal-medya-reklam-pazarlama-animasyon-kursu" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
@@ -207,7 +206,7 @@
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Herkesin alması gereken eğitim</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Photoshop ile Retouch odaklı Türkiye’nin en kapsamlı fotoğraf düzenleme eğitim setidir. Retouch konusunda uzman olun.&nbsp;<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://go.rasulov.net/photoshop-cc-photo-retouch-rotus-kursu-afgan-rasulov" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
@@ -219,7 +218,7 @@
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Herkesin alması gereken eğitim</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Photoshop CC Dersleri: Başlangıç, orta ve ileri Photoshop Kursu. Bridge CC ve Fotoğrafçılara özel Camera RAW Öğrenin!&nbsp;<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://go.rasulov.net/adobe-photoshop-cc-dersleri-afgan-rasulov" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
@@ -231,7 +230,7 @@
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Herkesin alması gereken eğitim</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">3 Programı tek eğitimde öğrenin. Adobe After Effects, Illustrator ve Premiere Pro ile 2D animasyon öğren.<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://go.rasulov.net/pratik-teknikler-ile-animasyon-yapimi" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
@@ -239,11 +238,11 @@
                         <img src="assets/images/adobe-premiere-pro-cc-ile-mzik-klip-ekimi-ve-editi-750x422.jpg" alt="Sıfırdan Premiere Pro CC ile Müzik Klibi Yapımı ve Montajı" data-slide-to="9" data-bs-slide-to="9">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Sıfırdan Premiere Pro CC ile Müzik Klibi Yapımı ve Montajı</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Adobe Premiere Pro CC ile Müzik Klip Çekimi ve Editi</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Freelance klip çekimi yapanlar için</em></h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Pratik ve uygulamalı video yapma programı Adobe Premiere Pro video düzenleme ve video montaj programını öğrenin.&nbsp;<br></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Premiere Pro ile kendi müzik videolarınızı yapmaya başlayın. Hem müzik çekimini öğren hem montajlamayı.<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://go.rasulov.net/adobe-premiere-pro-muzik-klip-cekimi-video-edit-kursu" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
@@ -255,7 +254,7 @@
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Rötuş yapmayı öğrenmek isteyen doğum fotoğrafçıları için</em><em><br></em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Doğum, Bebek ve Yenidoğan Fotoğrafçılığı Hızlı Öğrenme Kursu ile Pro Fotoğrafçıların Tekniklerini Hemen Öğreneceksin&nbsp;<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://go.rasulov.net/dogum-fotografciligi-kursu" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
@@ -267,7 +266,7 @@
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Yeni başlayanlar alsın sadece</em><em><br></em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Final Cut Pro X kullanarak video düzenlemeyi öğrenin. YENİ BAŞLAYAN ve HIZLI ÖĞRENMEK isteyenler için tasarlanmıştır.&nbsp;<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://go.rasulov.net/final-cut-pro-x-kursu-ile-video-duzenlemeyi-ogrenin" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
@@ -279,7 +278,31 @@
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Fotoğrafçıların %83'ü tavsiye ediyor</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Fotoğrafçılar için düğün videosu, düğün klibi, özel gün videoları, doğum hikayesi, video düzenleme hakkında her şey.&nbsp;<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://go.rasulov.net/fotografclar-icin-video-duzenleme-montaj-egitimi" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
+                </div>
+            </div><div class="item features-image сol-12 col-md-6 col-lg-4">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="assets/images/sfrdan-premiere-pro-cc-ile-mzik-klibi-yapm-ve-montaj-750x422.jpg" alt="Sıfırdan Premiere Pro CC ile Müzik Klibi Yapımı ve Montajı" data-slide-to="13" data-bs-slide-to="13">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Sıfırdan Premiere Pro CC ile Müzik Klibi Yapımı ve Montajı</strong></h5>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Hızlı müzik klibi yapmak isteyenlere tavsiye edilir</em></h6>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Pratik ve uygulamalı video yapma programı Adobe Premiere Pro video düzenleme ve video montaj programını öğrenin.<br></p>
+                    </div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://go.rasulov.net/premiere-pro-cc-video-duzenleyici-muzik-klibi-yapma-egitim-seti" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
+                </div>
+            </div><div class="item features-image сol-12 col-md-6 col-lg-4">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="assets/images/photoshop-lightroom-cc-2020-fotoraf-dzenleme-eitim-seti-750x422.jpg" alt="Sıfırdan Premiere Pro CC ile Müzik Klibi Yapımı ve Montajı" data-slide-to="14" data-bs-slide-to="14">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Photoshop Lightroom CC 2020 - Fotoğraf Düzenleme Eğitim Seti</strong></h5>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Toplu fotoğraf düzenleyenlerin tercihi</em></h6>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Fotoğrafçılar için sıfırdan Adobe Photoshop Lightroom CC 2020 fotoğraf düzenleme video eğitim seti<br></p>
+                    </div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://go.rasulov.net/lightroom-cc-fotograf-duzenleme-egitim-seti" class="btn item-btn btn-danger display-7" target="_blank">Siparişi Tamamla</a></div>
                 </div>
             </div>
         </div>
@@ -383,7 +406,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3111945" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">AI Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3111945" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/landing-page-builder.html">Landing Page Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
