--- a/fenomen-yorumlari.html
+++ b/fenomen-yorumlari.html
@@ -59,7 +59,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
 		<div class="container">
 			<div class="navbar-brand">
 				
-				<span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-4" href="https://mobiri.se">afganrasulov</a></span>
+				<span class="navbar-caption-wrap"><a class="navbar-caption text-danger text-primary display-4" href="https://rasulov.net">afganrasulov</a></span>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
@@ -77,7 +77,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
 						<a class="nav-link link text-white text-primary display-4" href="afgan-rasulov-kimdir.html#article02-e" aria-expanded="false">Hakkında</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-white text-primary display-4" href="premium-egitimler.html#top">Eğitimler</a>
+						<a class="nav-link link text-white text-primary display-4" href="premium-egitimler.html#features2-16">Eğitimler</a>
 					</li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="fenomen-yorumlar.html#top">Fenomen Yorumları</a></li></ul>
 				
 				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-4" href="https://mobiri.se"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn"></span>VIP DANIŞMANLIK</a></div>
