create github pages

--- a/premium-egitimler.html
+++ b/premium-egitimler.html
@@ -78,7 +78,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
 					</li>
 					<li class="nav-item">
 						<a class="nav-link link text-white text-primary display-4" href="premium-egitimler.html">Eğitimler</a>
-					</li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="fenomen-yorumlar.html">Fenomen Yorumları</a></li></ul>
+					</li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="fenomen-yorumlari.html">Fenomen Yorumları</a></li></ul>
 				
 				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-4" href="https://mobiri.se"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn"></span>VIP DANIŞMANLIK</a></div>
 			</div>
@@ -146,7 +146,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             <div class="item features-image сol-12 col-md-6 col-lg-4 active">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/10-parmak-klavye-kursu-ile-hzl-yazmay-renin-750x422.jpg" alt="10 Parmak Klavye Kursu ile Hızlı Yazmayı Öğrenin" data-slide-to="0" data-bs-slide-to="0">
+                        <img src="assets/images/10-parmak-klavye-kursu-ile-hzl-yazmay-renin-750x422.webp" alt="10 Parmak Klavye Kursu ile Hızlı Yazmayı Öğrenin" data-slide-to="0" data-bs-slide-to="0">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>10 Parmak Klavye Kursu ile Hızlı Yazmayı Öğrenin</strong></h5>
@@ -158,7 +158,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/youtube-kanalnz-bytmek-iin-google-reklam-stratejileri-750x422.jpg" alt="YouTube Kanalınızı Büyütmek için Google Reklam Stratejileri" data-slide-to="1" data-bs-slide-to="1">
+                        <img src="assets/images/youtube-kanalnz-bytmek-iin-google-reklam-stratejileri-750x422.webp" alt="YouTube Kanalınızı Büyütmek için Google Reklam Stratejileri" data-slide-to="1" data-bs-slide-to="1">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>YouTube için Google Reklam Stratejileri</strong></h5>
@@ -173,7 +173,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/youtube-kanal-gelitirme-ve-seo-formlleri-750x422.jpg" alt="YouTube Kanal Geliştirme ve SEO Formülleri" data-slide-to="2" data-bs-slide-to="2">
+                        <img src="assets/images/youtube-kanal-gelitirme-ve-seo-formlleri-750x422.webp" alt="YouTube Kanal Geliştirme ve SEO Formülleri" data-slide-to="2" data-bs-slide-to="2">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>YouTube Kanal Geliştirme ve SEO Formülleri</strong></h5>
@@ -185,7 +185,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/yeni-balayanlar-iin-youtube-video-montaj-dahil-694x390.jpg" alt="YouTube ve Video Montaj Eğitim Seti (Yeni Başlayanlar İçin)" data-slide-to="3" data-bs-slide-to="3">
+                        <img src="assets/images/yeni-balayanlar-iin-youtube-video-montaj-dahil-694x390.webp" alt="YouTube ve Video Montaj Eğitim Seti (Yeni Başlayanlar İçin)" data-slide-to="3" data-bs-slide-to="3">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>YouTube ve Video Montaj Eğitim Seti (Yeni Başlayanlar İçin)</strong></h5>
@@ -197,7 +197,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/dijital-pazarlama-tasarm-kursu-a-z-70-proje-1-arada-750x422.jpg" alt="Dijital Pazarlama Tasarım Kursu A-Z™  70 Proje 1 Arada!" data-slide-to="4" data-bs-slide-to="4">
+                        <img src="assets/images/dijital-pazarlama-tasarm-kursu-a-z-70-proje-1-arada-750x422.webp" alt="Dijital Pazarlama Tasarım Kursu A-Z™  70 Proje 1 Arada!" data-slide-to="4" data-bs-slide-to="4">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Dijital Pazarlama Tasarım Kursu A-Z™ | 70 Proje 1 Arada!</strong></h5>
@@ -209,7 +209,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/dijital-reklam-iin-tasarm-ve-animasyon-kursu-694x390.jpg" alt="Dijital Reklam için Tasarım ve Animasyon Kursu" data-slide-to="5" data-bs-slide-to="5">
+                        <img src="assets/images/dijital-reklam-iin-tasarm-ve-animasyon-kursu-694x390.webp" alt="Dijital Reklam için Tasarım ve Animasyon Kursu" data-slide-to="5" data-bs-slide-to="5">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Dijital Reklam için Tasarım ve Animasyon Kursu</strong></h5>
@@ -221,7 +221,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/retouch-101-201-profesyone-photoshop-eitimi-full-paket-694x390.jpg" alt="RETOUCH 101 &amp; 201| Profesyonel Photoshop Eğitimi Full Paket" data-slide-to="6" data-bs-slide-to="6">
+                        <img src="assets/images/retouch-101-201-profesyone-photoshop-eitimi-full-paket-694x390.webp" alt="RETOUCH 101 &amp; 201| Profesyonel Photoshop Eğitimi Full Paket" data-slide-to="6" data-bs-slide-to="6">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>RETOUCH 101 &amp; 201| Profesyonel Photoshop Eğitimi Full Paket</strong></h5>
@@ -233,7 +233,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/adan-zye-photoshop-cc-2020-dersleri-afgan-rasulov-750x422.jpg" alt="A'dan Z'ye Photoshop CC 2020 Dersleri | Afgan Rasulov" data-slide-to="7" data-bs-slide-to="7">
+                        <img src="assets/images/adan-zye-photoshop-cc-2020-dersleri-afgan-rasulov-750x422.webp" alt="A'dan Z'ye Photoshop CC 2020 Dersleri | Afgan Rasulov" data-slide-to="7" data-bs-slide-to="7">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>A'dan Z'ye Photoshop CC 2020 Dersleri | Afgan Rasulov</strong></h5>
@@ -245,7 +245,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/sfrdan-2d-animasyon-yapm-kursu-750x422.jpg" alt="Sıfırdan 2D Animasyon Yapımı Kursu" data-slide-to="8" data-bs-slide-to="8">
+                        <img src="assets/images/sfrdan-2d-animasyon-yapm-kursu-750x422.webp" alt="Sıfırdan 2D Animasyon Yapımı Kursu" data-slide-to="8" data-bs-slide-to="8">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Sıfırdan 2D Animasyon Yapımı Kursu</strong></h5>
@@ -257,7 +257,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/adobe-premiere-pro-cc-ile-mzik-klip-ekimi-ve-editi-750x422.jpg" alt="Sıfırdan Premiere Pro CC ile Müzik Klibi Yapımı ve Montajı" data-slide-to="9" data-bs-slide-to="9">
+                        <img src="assets/images/adobe-premiere-pro-cc-ile-mzik-klip-ekimi-ve-editi-750x422.webp" alt="Sıfırdan Premiere Pro CC ile Müzik Klibi Yapımı ve Montajı" data-slide-to="9" data-bs-slide-to="9">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Adobe Premiere Pro CC ile Müzik Klip Çekimi ve Editi</strong></h5>
@@ -269,7 +269,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/doum-fotorafl-fotoraf-dzenleme-kursu-750x422.jpg" alt="Doğum Fotoğrafçılığı Fotoğraf Düzenleme Kursu | Photoshop CC" data-slide-to="10" data-bs-slide-to="10">
+                        <img src="assets/images/doum-fotorafl-fotoraf-dzenleme-kursu-750x422.webp" alt="Doğum Fotoğrafçılığı Fotoğraf Düzenleme Kursu | Photoshop CC" data-slide-to="10" data-bs-slide-to="10">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Doğum Fotoğrafçılığı Fotoğraf Düzenleme Kursu | Photoshop CC</strong></h5>
@@ -281,7 +281,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/final-cut-pro-x-ile-video-dzenleme-balang-rehberi-750x422.jpg" alt="Final Cut Pro X ile Video Düzenleme - Başlangıç Rehberi" data-slide-to="11" data-bs-slide-to="11">
+                        <img src="assets/images/final-cut-pro-x-ile-video-dzenleme-balang-rehberi-750x422.webp" alt="Final Cut Pro X ile Video Düzenleme - Başlangıç Rehberi" data-slide-to="11" data-bs-slide-to="11">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Final Cut Pro X ile Video Düzenleme - Başlangıç Rehberi</strong></h5>
@@ -293,7 +293,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/fotoraflar-iin-video-dzenleme-montaj-eitimi-750x422.jpg" alt="Fotoğrafçılar için Video Düzenleme, Montaj Eğitimi" data-slide-to="12" data-bs-slide-to="12">
+                        <img src="assets/images/fotoraflar-iin-video-dzenleme-montaj-eitimi-750x422.webp" alt="Fotoğrafçılar için Video Düzenleme, Montaj Eğitimi" data-slide-to="12" data-bs-slide-to="12">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Fotoğrafçılar için Video Düzenleme, Montaj Eğitimi</strong></h5>
@@ -305,7 +305,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/sfrdan-premiere-pro-cc-ile-mzik-klibi-yapm-ve-montaj-750x422.jpg" alt="Sıfırdan Premiere Pro CC ile Müzik Klibi Yapımı ve Montajı" data-slide-to="13" data-bs-slide-to="13">
+                        <img src="assets/images/sfrdan-premiere-pro-cc-ile-mzik-klibi-yapm-ve-montaj-750x422.webp" alt="Sıfırdan Premiere Pro CC ile Müzik Klibi Yapımı ve Montajı" data-slide-to="13" data-bs-slide-to="13">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Sıfırdan Premiere Pro CC ile Müzik Klibi Yapımı ve Montajı</strong></h5>
@@ -317,7 +317,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/photoshop-lightroom-cc-2020-fotoraf-dzenleme-eitim-seti-750x422.jpg" alt="Sıfırdan Premiere Pro CC ile Müzik Klibi Yapımı ve Montajı" data-slide-to="14" data-bs-slide-to="14">
+                        <img src="assets/images/photoshop-lightroom-cc-2020-fotoraf-dzenleme-eitim-seti-750x422.webp" alt="Sıfırdan Premiere Pro CC ile Müzik Klibi Yapımı ve Montajı" data-slide-to="14" data-bs-slide-to="14">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Photoshop Lightroom CC 2020 - Fotoğraf Düzenleme Eğitim Seti</strong></h5>
@@ -428,7 +428,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3111945" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/html-code-generator.html">HTML Code Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3111945" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/html-editor.html">WYSIWYG HTML Editor</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
