--- a/afgan-rasulov-kimdir.html
+++ b/afgan-rasulov-kimdir.html
@@ -59,7 +59,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
 		<div class="container">
 			<div class="navbar-brand">
 				
-				<span class="navbar-caption-wrap"><a class="navbar-caption text-danger text-primary display-4" href="https://rasulov.net">afganrasulov</a></span>
+				<span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-4" href="https://mobiri.se">afganrasulov</a></span>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
@@ -74,13 +74,13 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
 						<a class="nav-link link text-white text-primary display-4" href="index.html">Ana Sayfa</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-white text-primary display-4" href="afgan-rasulov-kimdir.html" aria-expanded="false">Hakkında</a>
+						<a class="nav-link link text-white text-primary display-4" href="afgan-rasulov-kimdir.html#article02-e" aria-expanded="false">Hakkında</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-white text-primary display-4" href="premium-egitimler.html">Eğitimler</a>
-					</li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="fenomen-yorumlari.html">Fenomen Yorumları</a></li></ul>
+						<a class="nav-link link text-white text-primary display-4" href="premium-egitimler.html#top">Eğitimler</a>
+					</li></ul>
 				
-				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-4" href="https://mobiri.se"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn"></span>VIP DANIŞMANLIK</a></div>
+				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-4" href="https://superpeer.com/afganrasulov" target="_blank"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn"></span>VIP DANIŞMANLIK</a></div>
 			</div>
 		</div>
 	</nav>
@@ -355,7 +355,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3111945" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/html-code-generator.html">HTML Code Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3111945" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com">Mobirise </a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
