--- a/fenomen-yorumlari.html
+++ b/fenomen-yorumlari.html
@@ -80,7 +80,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
 						<a class="nav-link link text-white text-primary display-4" href="premium-egitimler.html">Eğitimler</a>
 					</li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="fenomen-yorumlari.html">Fenomen Yorumları</a></li></ul>
 				
-				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-4" href="https://mobiri.se"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn"></span>VIP DANIŞMANLIK</a></div>
+				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-4" href="https://superpeer.com/afganrasulov" target="_blank"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn"></span>VIP DANIŞMANLIK</a></div>
 			</div>
 		</div>
 	</nav>
